# sregpt

./: LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/PULL_REQUEST_TEMPLATE/: bug-fix-template.md  documentation-template.md  feature-request-template.md  hotfix-template.md  refactoring-template.md  security-patch-template.md  ui-ux-improvement.md
.github/workflows/: build-containers.yaml
backend/: Dockerfile  docx2txt-0.8-py3-none-any.whl  main.py  pyproject.toml
backend/app/config/: .env.dev  env.py
backend/compose/: compose.yaml
backend/hippocamp/: context.py
backend/hippocamp/api/routers/: chat.py
backend/hippocamp/config/: .env.dev  env.py
backend/hippocamp/engine/: generate.py  index.py  loader.py  settings.py  utils.py
frontend/: package.json
infrastructure/: traefik.yaml
infrastructure/app-of-apps/: sregpt.yaml
infrastructure/app-of-apps/app/: Chart.yaml  values.yaml
infrastructure/app-of-apps/app/templates/: hippocamp.yaml  namespaces.yaml  postgres.yaml  ray-operator-crds.yaml  ray-operator.yaml  redis.yaml
infrastructure/app-of-apps/hippocamp/: Chart.yaml  values.yaml
infrastructure/app-of-apps/postgres/: Chart.yaml  values.yaml
infrastructure/app-of-apps/ray-operator/: Chart.yaml
infrastructure/app-of-apps/ray-operator-crds/: Chart.yaml
infrastructure/app-of-apps/redis/: Chart.yaml
infrastructure/flyte/: dns.json  edge-values.yaml  flyte.crt  flyte.key  local-flyte-resources.yaml
infrastructure/k3s/: README.md
infrastructure/microk8s/: README.md
(+5 files in other folders)
